# HandymanBackend

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  pyproject.toml  repro_script.py  requirements.txt  schema.yml  test_output.txt
.github/workflows/: ci.yml
.zed/: debug.json
apps/accounts/: admin.py  models.py
apps/accounts/migrations/: 0001_initial.py  0002_remove_customerprofile_user_and_more.py  0003_alter_userrole_role.py  0004_add_is_dummy.py  0005_add_active_role.py
apps/accounts/tests/: test_models.py
apps/authn/: admin.py  apps.py  authentication.py  jwt_service.py  models.py  permissions.py  schema.py  serializers.py  services.py  twilio_service.py
apps/authn/migrations/: 0001_initial.py  0002_phone_verification.py  0003_alter_phoneverificationcode_phone_number.py
apps/authn/tests/: __init__.py  test_app_config.py  test_authentication.py  test_jwt_service.py  test_models.py  test_permissions.py  test_serializers.py  test_services.py  test_twilio_service.py  test_views_mobile.py  test_views_web.py
apps/authn/urls/: __init__.py  mobile.py  web.py
apps/authn/views/: __init__.py  mobile.py  web.py
apps/bookmarks/: admin.py  models.py  serializers.py
apps/bookmarks/migrations/: 0001_initial.py
apps/bookmarks/tests/: test_models.py  test_views.py
apps/bookmarks/urls/: mobile.py
apps/bookmarks/views/: mobile.py
apps/chat/: admin.py  models.py  serializers.py  services.py
apps/chat/migrations/: 0001_initial.py  0002_chatmessageimage_to_chatmessageattachment.py  0003_rename_chat_messag_message_a5d9c5_idx_chat_messag_message_4c3077_idx_and_more.py
apps/chat/tests/: test_models.py  test_serializers.py  test_services.py  test_views_mobile_handyman.py  test_views_mobile_homeowner.py
apps/chat/urls/: mobile.py
apps/chat/views/: mobile_handyman.py  mobile_homeowner.py
apps/common/: admin.py  admin_mixins.py  constants.py  dashboard.py  email.py  exceptions.py  models.py  openapi.py  responses.py  serializers.py  storage.py  validators.py  views.py
apps/common/migrations/: 0001_phone_verification.py
apps/common/tests/: __init__.py  test_dashboard.py  test_email.py  test_exceptions.py  test_models.py  test_responses.py  test_serializers.py  test_storage.py  test_views.py
apps/common/urls/: __init__.py  mobile.py
apps/discounts/: admin.py  models.py  serializers.py  services.py
apps/discounts/migrations/: 0001_initial.py
apps/discounts/tests/: test_models.py  test_services.py  test_views.py
apps/discounts/urls/: __init__.py  mobile.py
apps/discounts/views/: mobile.py
apps/jobs/: admin.py  models.py  serializers.py  services.py
apps/jobs/migrations/: 0001_initial.py  0002_rename_estimated_budget_per_hour_to_estimated_budget.py  0003_add_postal_code_to_job.py  0004_remove_job_jobs_custome_d3929b_idx_and_more.py  0005_job_job_items.py  0006_add_status_at_to_job.py  0007_add_is_dummy.py  0008_jobapplication.py  0009_job_assigned_handyman_job_completed_at_and_more.py  0010_migrate_job_items_to_jobtask.py  0011_add_dispute_management_permission.py  0012_remove_job_items_field.py  0013_review.py  0014_alter_worksession_end_latitude_and_more.py  0015_add_end_photo_to_worksession.py  0016_jobapplication_estimated_total_price_and_more.py  0017_update_jobreimbursement_add_attachment_model.py  0018_add_job_reimbursement_category.py  0019_jobimage_to_jobattachment.py  0020_rename_job_images_job_id_10e2bc_idx_job_attachm_job_id_99494d_idx_and_more.py  0021_add_document_file_type.py  0022_add_direct_offer_fields.py  0023_alter_job_postal_code_max_length.py  0024_job_payment_mode_jobdispute_financial_action_error_and_more.py  0025_backfill_job_payment_mode_legacy_exempt.py  0026_job_discount_job_platform_fee_discount_percent_and_more.py  0027_jobapplication_discount_applied_and_more.py
apps/jobs/tests/: test_admin.py  test_handyman_task_views.py  test_job_application_models.py  test_models.py  test_ongoing_read_views.py  test_ongoing_write_views.py  test_serializers.py  test_services.py  test_views_mobile.py
apps/jobs/urls/: mobile.py
apps/jobs/views/: mobile.py
apps/notifications/: admin.py  firebase_service.py  models.py  serializers.py  services.py
apps/notifications/migrations/: 0001_initial.py  0002_alter_notification_notification_type_and_more.py  0003_broadcastnotification_target_users_and_more.py  0004_add_target_role.py  0005_notification_triggered_by.py  0006_alter_notification_notification_type.py  0007_alter_notification_type_add_daily_report_updated.py  0008_alter_notification_notification_type.py  0009_alter_notification_notification_type.py  0010_alter_notification_notification_type.py
apps/notifications/tests/: test_broadcast.py  test_firebase_service.py  test_models.py  test_serializers.py  test_services.py  test_views_mobile.py
apps/notifications/urls/: mobile.py
apps/notifications/views/: mobile.py
apps/payments/: admin.py  models.py  serializers.py  services.py
apps/payments/migrations/: 0001_initial.py
apps/payments/tests/: test_services.py  test_services_coverage.py  test_views_mobile.py  test_views_redirects.py  test_views_webhooks.py
apps/payments/urls/: mobile.py  redirects.py  webhooks.py
apps/payments/views/: mobile.py  redirects.py  webhooks.py
apps/profiles/: admin.py  models.py  serializers.py  services.py
apps/profiles/migrations/: 0001_initial.py  0002_remove_admin_profile.py  0003_phone_verification.py  0004_homeownerprofile_delete_customerprofile.py  0006_add_avatar.py  (+6 more)
apps/waitlist/: __init__.py  admin.py  apps.py  models.py  serializers.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
secrets/: jwt_private.pem  jwt_public.pem
templates/admin/: index.html
(+50 files in other folders)
