[project]
name = "solutionbank"
version = "0.1.0"
description = "SolutionBank Backend"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "boto3>=1.40.39",
    "cryptography>=46.0.1",
    "django>=5.2.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "google-auth>=2.40.3",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.10",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.37.0",
    "whitenoise>=6.11.0",
]

[tool.pyright]
typeCheckingMode = "off"
reportMissingImports = false
reportMissingTypeStubs = false
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportOptionalOperand = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportUntypedBaseClass = false
reportUntypedNamedTuple = false
reportPrivateUsage = false
reportConstantRedefinition = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportInconsistentConstructor = false
reportOverlappingOverload = false
reportMissingSuperCall = false
reportUninitializedInstanceVariable = false
reportInvalidStringEscapeSequence = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportInvalidTypeVarUse = false
reportCallInDefaultInitializer = false
reportUnnecessaryIsInstance = false
reportUnnecessaryCast = false
reportAssertAlwaysTrue = false
reportSelfClsParameterName = false
reportImplicitStringConcatenation = false

include = ["apps", "config", "manage.py", "main.py"]
exclude = [
    "**/__pycache__",
    "**/migrations",
    ".venv",
    "venv",
    ".git"
]

[dependency-groups]
dev = []
